--- a/trunk/jsWaffleTemplate/assets/www/index.html
+++ b/trunk/jsWaffleTemplate/assets/www/index.html
@@ -32,10 +32,21 @@
 	<h2>Beep/Ring/Vibrate</h2>
 	<div class="buttons">
 		<button onclick="droid.beep()">beep</button>
-		<button onclick="droid.ring()">ring</button>
+		<button onclick="check_ring()">ring</button>
 		<button onclick="droid.vibrate()">vibrate</button>
 		<button onclick="droid.makeToast('Hello!')">makeToast</button>
 	</div>
+	<script type="text/javascript">
+		var ring_flag = false;
+		function check_ring() {
+			if (b == false) {
+				droid.ring(); // ベルを鳴らす
+			} else {
+				droid.ring_stop(); // ベルを止める
+			}
+			ring_flag = !ring_flag;
+		}
+	</script>
 	
 	<h2>Sound/Video</h2>	
 	<div class="buttons">
@@ -88,20 +99,9 @@
 		}
 	</script>
 	
-	<h2>Snapshot</h2>
-	<div class="buttons">
-		<button onclick="showSnapshot()">Snapshot!!</button>
-	</div>
-	<script type="text/javascript">
-		function showSnapshot() {
-			var path = "file:/sdcard/test.png";
-			droid.snapshotToFile(path, "png");
-			droid.startIntent(path);
-		}
-	</script>
-	
 	<h2>HTTP</h2>
 	<div class="buttons">
+		<button onclick="droid.startIntent('http://d.aoikujira.com/android-app/jswaffle-ad.php')">Show Web Page</button>
 		<button id="httpget_btn" onclick="testHTTP()">httpGet:Get IP</button>
 		<button id="dl_btn" onclick="testHTTPDownload()">httpDownload:DL Image</button>
 	</div>
@@ -124,6 +124,27 @@
 					droid.startIntent("file:///sdcard/logo.png");
 				}
 			);
+		}
+	</script>
+	
+	<h2>Snapshot</h2>
+	<div class="buttons">
+		<button onclick="showSnapshot()">Snapshot!!</button>
+	</div>
+	<script type="text/javascript">
+		function showSnapshot() {
+			droid.vibrate();
+			var path = "file:///sdcard/test.png";
+			droid.snapshotToFile(path, "png");
+			setTimeout(
+				function () {
+					if (droid.fileExists(path)) {
+						droid.startIntent(path);
+					} else {
+						alert("保存失敗!!");
+					}
+				}
+			,500);
 		}
 	</script>
 	
